--- a/src/ros2_aruco/ros2_aruco/config/aruco_parameters.yaml
+++ b/src/ros2_aruco/ros2_aruco/config/aruco_parameters.yaml
@@ -1,7 +1,7 @@
 /aruco_node:
   ros__parameters:
-    marker_size: .0155
-    aruco_dictionary_id: DICT_5X5_250
-    image_topic: /camera/color/image_raw
-    camera_info_topic: /camera/color/camera_info
-    camera_frame: camera_link
+    marker_size: .07
+    aruco_dictionary_id: DICT_4X4_1000
+    image_topic: /camera/image_raw
+    camera_info_topic: /camera/camera_info
+    camera_frame: camera
